# fitsview

./: Cargo.toml
src/: main.rs
ui/: app-window.slint  checkmenu.slint  groupbox.slint  main.slint  utils.slint  warningdialog.slint
