[package]
name = "fitsview"
version = "0.1.1"
readme = "README.md"
description = "FITS Image Viewer"
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "fitsview"
path = "src/main.rs"

[dependencies]
numeris = { path = "../numeris" }
thiserror = "2"
num-traits = "0.2.18"
chrono = "0.4.42"
slint = "1.13.1"
fast_image_resize = "5.3.0"
rgb = "0.8.5"
anyhow = "1.0.100"
rfd = "0.15.4"
fits-rs = { path = "../fits-rs" }

[build-dependencies]
slint-build = "1.13.1"

[profile.test]
opt-level = 3
